--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "async": "^0.9.0",
+    "buffertools": "^2.1.2",
     "lodash": "^2.4.1",
     "winston": "^0.7.3"
   },
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/MCProHosting/memcluster/issues"
   },
-  "homepage": "https://github.com/MCProHosting/memcluster"
+  "homepage": "https://github.com/MCProHosting/memcluster",
+  "devDependencies": {
+    "expresso": "^0.9.2",
+    "memcache": "^0.3.0"
+  }
 }
