--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "jasmine-node spec/"
+    "test": "bash test.sh"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,5 @@
   "bugs": {
     "url": "https://github.com/MCProHosting/memcluster/issues"
   },
-  "homepage": "https://github.com/MCProHosting/memcluster",
-  "devDependencies": {
-    "expresso": "^0.9.2",
-    "memcache": "^0.3.0"
-  }
+  "homepage": "https://github.com/MCProHosting/memcluster"
 }
